force-app/main/default/objects/Medical_Detail__c/Medical_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores Medical Details of the Patient</description>
    <label>Medical Detail</label>
    <nameField>
        <label>Medical Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>