force-app/main/default/objects/Medical_Detail__c/fields/Condition_Record_Date__c.field-meta.xml
<CustomField>
    <fullName>Condition_Record_Date__c</fullName>
    <label>Condition Record Date</label>
    <type>Date</type>
</CustomField>