force-app/main/default/objects/Medical_Detail__c/fields/Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value__c</fullName>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>