force-app/main/default/objects/Medical_Detail__c/fields/Condition_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value_Type__c</fullName>
    <label>Condition Value Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>