force-app/main/default/objects/Medical_Detail__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Patient</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Details</relationshipLabel>
    <relationshipName>Medical_Details</relationshipName>
    <type>Lookup</type>
</CustomField>