force-app/main/default/objects/Medical_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Condition_Name__c</columns>
    <columns>Condition_Record_Date__c</columns>
    <columns>Condition_Value__c</columns>
    <columns>Condition_Value_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>